service-b/deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: service-b

spec:

  replicas: 2

  selector:

    matchLabels:

      app: service-b

  template:

    metadata:

      labels:

        app: service-b
      annotations:
        deployAt: 2020-10-10-v1

    spec:

      containers:

        - image: docker.io/library/nginx:alpine

          name: web

          ports:

            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: "/usr/share/nginx/html"
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: service-b
