service-b/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-b
spec:
  rules:
    - host: service-b.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-b
                port:
                  number: 80
